[gd_scene load_steps=5 format=2]

[ext_resource path="res://enemies/HeadyHandBaller/state_machine/RoamingState.gd" type="Script" id=1]
[ext_resource path="res://enemies/HeadyHandBaller/state_machine/HeadyHandBallerFSM.gd" type="Script" id=2]
[ext_resource path="res://enemies/HeadyHandBaller/state_machine/DeadState.gd" type="Script" id=3]
[ext_resource path="res://enemies/HeadyHandBaller/state_machine/StillState.gd" type="Script" id=4]

[node name="StateMachine" type="Node"]
script = ExtResource( 2 )

[node name="AdvancingState" type="Node" parent="."]

[node name="RoamingState" type="Node" parent="."]
script = ExtResource( 1 )

[node name="NewPositionTimer" type="Timer" parent="RoamingState"]
one_shot = true

[node name="DeadState" type="Node" parent="."]
script = ExtResource( 3 )

[node name="StillState" type="Node" parent="."]
script = ExtResource( 4 )

[node name="StillTimer" type="Timer" parent="StillState"]
one_shot = true

[node name="ProjectileSeparationTimer" type="Timer" parent="StillState"]
wait_time = 0.01
one_shot = true
